--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
